# PinVol

./: README.md
PinVolQt/: CMakeLists.txt
PinVolQt/qml/: main.qml
PinVolQt/src/: main.cpp  volumemanager.cpp  volumemanager.h
